--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 		<!-- 图片 --> 
 		<div class="pic">
 			<ul>
-				<li><a href="#"><img src="img/1.jpg" alt="无图"></a></li>
-				<li><a href="#"><img src="img/2.jpg" alt="无图"></a></li>
-				<li><a href="#"><img src="img/3.jpg" alt="无图"></a></li>
-				<li><a href="#"><img src="img/4.jpg" alt="无图"></a></li>
+				<li><a href="#"><img src="img/1.jpg" alt="找不到图片"></a></li>
+				<li><a href="#"><img src="img/2.jpg" alt="找不到图片"></a></li>
+				<li><a href="#"><img src="img/3.jpg" alt="找不到图片"></a></li>
+				<li><a href="#"><img src="img/4.jpg" alt="找不到图片"></a></li>
 			</ul>
 		</div>
 		<div class="dots">
